lines and more (useless edition)

--- a/flask_app/templates/station.html
+++ b/flask_app/templates/station.html
@@ -3,7 +3,9 @@
 <html>
 <head></head>
 <body>
-    {{ iframe|safe }}
+    {% for iframe in iframes %}
+    <div>{{ iframe|safe }}</div>
+    {% endfor %}
 </body>
 </html>
 {% endblock %}
