--- a/flask_app/templates/station.html
+++ b/flask_app/templates/station.html
@@ -3,9 +3,27 @@
 <html>
 <head></head>
 <body>
-    {% for iframe in iframes %}
-    <div>{{ iframe|safe }}</div>
-    {% endfor %}
+    <div style="display: inline">
+        <div style="display: inline-block; vertical-align: top" class="station_info">
+            <b>Station Name:</b> {{ data.name }} <br>
+            <b>Address:</b> {{ data.address }} <br>
+            <b>Lines:</b>
+            {% for line in data.linecodes %}
+                {{ line if line }}
+            {% endfor %} <br>
+
+            <b>Destinations:</b> <br>
+            {% for dest in dests %}
+                <a href= "{{url_for('trips.line_info',station_code=dest.code)}}" target='_top'>{{ dest.name }}</a>
+                : {{ dest.distance }} ft. <br>
+            {% endfor %} <br>
+        </div>
+        <div style="display: inline-block" class="map"> 
+            {% for iframe in iframes %}
+            <div>{{ iframe|safe }}</div>
+            {% endfor %}
+        </div>
+    </div>
 </body>
 </html>
 {% endblock %}
