ask about validator not working :(

--- a/flask_app/templates/station.html
+++ b/flask_app/templates/station.html
@@ -16,7 +16,7 @@
     </div>
     <div style="display: inline-block" class="map"> 
         {% for iframe in iframes %}
-        <div>{{ iframe|safe }}</div>
+        <div>{{ iframe|safe }}</div><br>
         {% endfor %}
     </div>
 </div>
