--- a/flask_app/templates/create_itin.html
+++ b/flask_app/templates/create_itin.html
@@ -1,8 +1,36 @@
+{% extends "header.html" %} {% block content %}
 <div style="display: inline">
-    <div style="display: inline-block; vertical-align: top" class="station_info">
-        {{ checked_stations }}
-    </div>
     <div style="display: inline-block" class="map">
         {{ iframe|safe }}
     </div>
+
+    <div style="display: inline-block; vertical-align: top" class="station_info">
+        {% for station in checked_stations %}
+            <a href="{{url_for('trips.line_info',station_code=station)}}" target='_top'>{{ stations[station] }}</a><br>
+        {% endfor %}
+        
+        {% if current_user.is_authenticated %}
+            <h3 class="text-xl">
+                Give your Darling darling beautiful darling itinerary a name!
+            </h3>
+            
+            <form class="review-form" method="POST" action="">
+                {{ itin_form.csrf_token }}
+                <div class="form-group">
+                    {{ itin_form.itin_name.label }}
+                    {{ itin_form.itin_name(class="form-content") }}
+                    {% if itin_form.itin_name.errors %}
+                    <div class="error" role="alert">
+                        {% for error in itin_form.itin_name.errors %}
+                        <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                    {% endif %}
+                </div>
+                {{ itin_form.submit(class="review-button") }}
+            </form>
+        {% endif %}
+
+    </div>
 </div>
+{% endblock %}
