--- a/flask_app/templates/header.html
+++ b/flask_app/templates/header.html
@@ -2,12 +2,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{url_for('static',filename='compiled.css')}}" />
+    <link rel="stylesheet" href="{{url_for('static',filename='custom.css')}}" />
     {% if title %}
     <title>{{ title }}</title>
     {% else %}
-    <title>Movie Reviews</title>
+    <title>WMATAAPI</title>
+    
     {% endif %}
+        {% if current_user.is_authenticated %}
+        <div class="flex">
+            <a class="my-5 mr-5 ml-0 navlink" href="{{ url_for('users.account') }}">Account</a>
+            <a class="my-5 mr-5 ml-0 navlink !bg-red-400/20 hover:!bg-red-500/50 !text-red-400 hover:!text-red-300"
+                href="{{ url_for('users.logout') }}">Logout</a>
+        </div>
+        {% else %}
+        <div class="flex">
+            <a class="my-5 mr-5 ml-0 navlink" href="{{ url_for('users.login') }}">Login</a>
+            <a class="my-5 mr-5 ml-0 navlink" href="{{ url_for('users.register') }}">Register</a>
+        </div>        
+        {% endif %}
+
 </head>
 <body>
 <a class="m-5 navlink" href="{{ url_for('trips.index') }}">GO HOME</a>
