--- a/flask_app/templates/login.html
+++ b/flask_app/templates/login.html
@@ -47,7 +47,7 @@
             </div>
             {% endif %}
         </div>
-        {{ form.submit(class="review-button") }}
+        {{ form.submit(class="button") }}
     </form>
 
 </div>
