--- a/flask_app/templates/account.html
+++ b/flask_app/templates/account.html
@@ -1,14 +1,11 @@
 {% extends "header.html" %} {% block content %}
 
 <div class="container mx-auto w-full md:w-2/3 lg:w-1/3">
-    <h3 class="text-xl">Welcome {{ current_user.username }}</h3>
+    <h3 class="text-xl">{{ current_user.username }}'s account</h3>
 </div>
 
 <div class="container mx-auto w-full md:w-2/3 lg:w-1/3">
-    <h3 class="text-xl">
-        Update Username
-    </h3>
-
+    <h3> Update username </h3>
     <form class="review-form" method="POST" action="">
         {{ update_username_form.csrf_token }}
         <div class="form-group">
@@ -22,11 +19,12 @@
             </div>
             {% endif %}
         </div>
-        {{ update_username_form.submit_username(class="review-button") }}
+        {{ update_username_form.submit_username(class="button") }}
     </form>
 
+    <h3>Itinerary List</h3>
     {% for itin, link in zipped %}
-        <a href="{{url_for('trips.create_itin',checked_stations=link)}}" target='_top'>{{ itin.itin_name }}</a> <br>
+        <a href="{{url_for('trips.create_itin',checked_stations=link)}}" target='_top'>{{ itin.itin_name }}</a><br> 
     {% endfor %}
 </div>
 
