--- a/flask_app/templates/header.html
+++ b/flask_app/templates/header.html
@@ -3,29 +3,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{url_for('static',filename='custom.css')}}" />
+    <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
     {% if title %}
     <title>{{ title }}</title>
     {% else %}
-    <title>WMATAAPI</title>
+    <title>WMATA ITIN</title>
     
     {% endif %}
-        {% if current_user.is_authenticated %}
-        <div class="flex">
-            <a class="my-5 mr-5 ml-0 navlink" href="{{ url_for('users.account') }}">Account</a>
-            <a class="my-5 mr-5 ml-0 navlink !bg-red-400/20 hover:!bg-red-500/50 !text-red-400 hover:!text-red-300"
-                href="{{ url_for('users.logout') }}">Logout</a>
-        </div>
-        {% else %}
-        <div class="flex">
-            <a class="my-5 mr-5 ml-0 navlink" href="{{ url_for('users.login') }}">Login</a>
-            <a class="my-5 mr-5 ml-0 navlink" href="{{ url_for('users.register') }}">Register</a>
-        </div>        
-        {% endif %}
+    <div class="navbar">
+        <a href="{{ url_for('trips.index') }}">GO HOME</a>
+    {% if current_user.is_authenticated %}
+        <a href="{{ url_for('users.account') }}">Account</a>
+        <a href="{{ url_for('users.logout') }}">Logout</a>
+    {% else %}
+        <a href="{{ url_for('users.login') }}">Login</a>
+        <a href="{{ url_for('users.register') }}">Register</a>     
+    {% endif %}
+        <br>
+        Nicole's WMATA itinerary creator!!!! Yay
+    </div>
 
 </head>
 <body>
-<a class="m-5 navlink" href="{{ url_for('trips.index') }}">GO HOME</a>
-<h1>WMATA!!!! LFG</h1>
 {% block content %}{% endblock %}
 </body>
 </html>
