--- a/flask_app/templates/header.html
+++ b/flask_app/templates/header.html
@@ -20,7 +20,7 @@
         <a href="{{ url_for('users.register') }}">Register</a>     
     {% endif %}
         <br>
-        Nicole's WMATA itinerary creator!!!! Yay
+        Nicole's WMATA itinerary creator aka shitter.com!!!! Yay
     </div>
 
 </head>
