--- a/flask_app/templates/header.html
+++ b/flask_app/templates/header.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{url_for('static',filename='custom.css')}}" />
-    <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
+    <link rel="icon" href="/static/images/favicon.ico">
     {% if title %}
     <title>{{ title }}</title>
     {% else %}
